--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: >
 version:          1.0
 gitbook_version:  3.2.3
 
-url:              'https://www.luthree.tk'
+url:              'https://www.luthr.ee'
 baseurl:          '/'
 rss:              RSS
 
